Fix purple nav button spacing

--- a/src/Components/search/Search.scss
+++ b/src/Components/search/Search.scss
@@ -8,7 +8,7 @@ form {
 .purpleButton {
     background-color: $purple;
     color: ivory;
-    margin-left: 74vw;
+    margin-left: -2vw;
     height: 5.7vh;
 }
 
