--- a/src/Components/shows/Shows.scss
+++ b/src/Components/shows/Shows.scss
@@ -72,8 +72,8 @@
     font-size: 1.2rem;
     font-weight: 600;
     // font-transform: underline;
-    margin-top: -1em;
-    margin-left: 61vw;
+    margin-top: -2em;
+    margin-left: 78vw;
     position: relative;
     
 }
